--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* 웹폰트 추가 */
 @font-face {
-  font-family: 'JGaegujaengyi-Medium-KO';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/JGaegujaengyi-Medium-KO.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'JGaegujaengyi-Medium-KO';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/JGaegujaengyi-Medium-KO.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
 
 /* 기본 설정 */
@@ -12,22 +12,22 @@ body {
   padding: 0;
   font-family: 'JGaegujaengyi-Medium-KO', Arial, sans-serif;
   color: #834124;
-  background: #000; /* 여백 배경색 */
+  background-color: black; /* 여백 색상 */
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
 
-/* 4:3 화면 설정 */
-.wrapper {
-  aspect-ratio: 3 / 4; /* 화면 비율 설정 */
-  width: 100%; /* 기본 너비 */
-  max-width: 768px; /* 최대 너비 제한 */
-  background-color: #CDEC55; /* 기본 배경색 */
+/* 4:3 화면 비율을 유지하는 컨테이너 */
+.main-container {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 4 / 3;
+  background-color: #CDEC55; /* 화면 기본 배경 */
   background-image: radial-gradient(#E4FF7B 15%, transparent 15%);
   background-size: 30px 30px; /* 도트 크기 증가 */
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -43,11 +43,7 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
-}
-
-/* 쿠키 페이지 배경 */
-.cookie-page {
-  background-image: radial-gradient(#D6F363 15%, transparent 15%);
+  position: relative;
 }
 
 /* 이미지 스타일 */
@@ -56,12 +52,12 @@ img {
   height: auto;
 }
 
-.intro-title {
-  margin-bottom: 10px; /* 제목 이미지와 고양이 이미지 간격 */
-}
-
 .intro-image {
   width: 150px;
+}
+
+.intro-title, .result-title, .result-cat {
+  margin: 10px;
 }
 
 .start-button, .result-home, .result-share, #reveal-btn {
