--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative; /* 요소 정렬에 중요 */
 }
 
 /* 공통 화면 스타일 */
@@ -43,23 +44,29 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
-  position: relative;
+  position: absolute; /* 고정 위치 */
+  top: 0;
+  left: 0;
 }
 
 /* 이미지 스타일 */
 img {
   max-width: 100%;
   height: auto;
+  z-index: 1; /* 이미지 층위 조정 */
 }
 
 .intro-image {
   width: 150px;
+  z-index: 2; /* 고양이 이미지 층위 */
 }
 
-.intro-title, .result-title, .result-cat {
+.intro-title {
   margin: 10px;
+  z-index: 3; /* 제목 이미지가 고양이 위에 위치 */
 }
 
+/* 버튼 스타일 */
 .start-button, .result-home, .result-share, #reveal-btn {
   width: 150px; /* 버튼 크기 축소 */
   margin: 10px;
@@ -83,6 +90,7 @@ img {
   text-align: center;
   width: 60%;
   line-height: 1.4;
+  z-index: 4;
 }
 
 /* 숨겨진 요소 */
