--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   padding: 0;
   font-family: 'JGaegujaengyi-Medium-KO', Arial, sans-serif;
   color: #834124;
-  background-color: black; /* 여백 색상 */
+  background-color: black; /* 여백을 검정색으로 설정 */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,7 +24,7 @@ body {
 .main-container {
   width: 100%;
   height: 100%;
-  aspect-ratio: 4 / 3;
+  aspect-ratio: 4 / 3; /* 화면 비율 4:3 유지 */
   background-color: #CDEC55; /* 화면 기본 배경 */
   background-image: radial-gradient(#E4FF7B 15%, transparent 15%);
   background-size: 30px 30px; /* 도트 크기 증가 */
