--- a/styles.css
+++ b/styles.css
@@ -85,43 +85,41 @@ img {
   height: auto;
 }
 
-/* 결과 화면 스타일 */
-.result-title {
-  width: 70%;
-  margin-bottom: 20px;
-}
-
-.result-cat-container {
-  position: relative;
-  width: 80%;
-  max-width: 300px;
-  margin: 0 auto;
-}
-
+/* 결과 화면 고양이&쪽지 크기 */
 .result-cat {
-  width: 100%;
+  max-width: 80%;
+  height: auto;
+  margin-top: 20px;
 }
 
+/* 결과 텍스트 스타일 */
 .fortune-text {
   position: absolute;
-  bottom: 15%; /* 텍스트를 화면 아래쪽으로 이동 */
+  top: 55%; /* 텍스트 위치 수정 */
   left: 50%;
-  transform: translate(-50%, 50%);
+  transform: translate(-50%, -50%);
   font-size: 1.2rem;
   font-weight: bold;
   color: #834124;
   text-align: center;
-  width: 70%;
+  width: 60%;
   line-height: 1.4;
   z-index: 3;
 }
 
-/* 결과 화면 버튼 스타일 */
+/* 결과 제목 스타일 */
+.result-title {
+  max-width: 80%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+/* 결과 화면 버튼 */
 .result-buttons {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .result-buttons img {
